Fix the XGBoost Train

--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -93,68 +93,30 @@
          "hovertemplate": "\n                    <b>X:</b> %{x}\n                    <br>\n                    <b>Y:</b> %{y}\n                    <br>\n                    <b>Z:</b> %{z}\n                    <br>\n                    <b>Charge (x marker_size):</b> %{marker.size:.2f}<br>\n                    <b>Time:</b> %{marker.color:.2f}\n                ",
          "marker": {
           "color": [
-           6303,
-           6317,
            6730,
-           7227,
-           7478,
-           8305,
            8325,
            9290,
-           9387,
-           9824,
            9860,
            9865,
-           9943,
-           9967,
            9970,
-           10022,
-           10025,
-           10099,
            10113,
            10133,
            10204,
-           10273,
            10763,
            10836,
            10944,
-           10956,
-           11102,
            11106,
-           11233,
-           11261,
-           11279,
            11292,
            11464,
-           11470,
-           11615,
            11698,
-           11790,
-           11803,
-           11824,
-           11843,
            11860,
-           11977,
-           12078,
-           12107,
-           12434,
-           12743,
-           12927,
            13036,
            13122,
            13311,
            13934,
-           14303,
-           15384,
-           15395,
-           15525,
            15794,
-           16500,
            16581,
-           17112,
-           17701,
-           18088,
-           18274
+           17701
           ],
           "colorbar": {
            "title": {
@@ -163,264 +125,112 @@
           },
           "opacity": 0.8,
           "size": [
-           8.700000286102295,
-           9.299999713897705,
            16.5,
-           7.5,
-           6.8999998569488525,
-           8.700000286102295,
            17.700000286102295,
            12.299999713897705,
-           10.5,
-           6.8999998569488525,
            12.299999713897705,
            12.299999713897705,
-           6.8999998569488525,
-           10.5,
            12.90000057220459,
-           11.700000286102295,
-           10.5,
-           8.100000143051147,
            14.09999942779541,
            15.299999713897705,
            17.09999942779541,
-           7.5,
            19.5,
            12.90000057220459,
            17.700000286102295,
-           11.100000143051147,
-           11.700000286102295,
            12.299999713897705,
-           3.8999998569488525,
-           8.100000143051147,
-           7.5,
            12.299999713897705,
            15.299999713897705,
-           10.5,
-           5.699999928474426,
            15.90000057220459,
-           10.5,
-           8.700000286102295,
-           9.899999856948853,
-           9.899999856948853,
            12.90000057220459,
-           11.100000143051147,
-           4.5,
-           10.5,
-           11.100000143051147,
-           3.8999998569488525,
-           5.699999928474426,
            12.299999713897705,
            14.700000286102295,
            14.700000286102295,
            13.5,
-           10.5,
-           10.5,
-           7.5,
-           11.100000143051147,
            14.700000286102295,
-           9.899999856948853,
            15.299999713897705,
-           8.700000286102295,
-           12.299999713897705,
-           11.700000286102295,
-           8.700000286102295
+           12.299999713897705
           ]
          },
          "mode": "markers",
          "name": "Detected",
          "type": "scatter3d",
          "x": [
-          -290.66,
-          124.97,
           54.26,
-          443.89,
-          361,
-          158.94,
           -88.05,
           1.71,
-          443.71,
-          194.34,
           124.97,
           124.97,
-          -66.7,
-          124.97,
-          124.97,
-          124.97,
-          46.29,
           124.97,
           124.97,
           -392.38,
           124.97,
-          -437.04,
           210.47,
           210.47,
           210.47,
           210.47,
-          210.47,
-          210.47,
-          -132.8,
-          303.41,
-          248.15,
           210.47,
           257.31,
-          -21.97,
-          210.47,
           326.85,
-          443.89,
-          210.47,
-          326.85,
-          -166.4,
           79.41,
-          158.94,
-          1.71,
-          210.47,
-          371.56,
-          405.83,
-          210.47,
           79.41,
           -211.35,
           -334.8,
           11.87,
-          35.54,
-          -290.66,
-          500.43,
-          -88.05,
           -66.7,
-          194.34,
           -334.8,
-          405.83,
-          292.9,
-          -189.98,
-          -368.93
+          292.9
          ],
          "y": [
-          -307.38,
-          -131.25,
           292.97,
-          -194.5,
-          -422.83,
-          -345.23,
           -384.3,
           -150.63,
-          -194.52,
-          -30.92,
           -131.25,
           -131.25,
-          276.92,
-          -131.25,
-          -131.25,
-          -131.25,
-          -34.88,
           -131.25,
           -131.25,
           334.24,
           -131.25,
-          217.8,
           -209.77,
           -209.77,
           -209.77,
           -209.77,
-          -209.77,
-          -209.77,
-          -501.45,
-          335.64,
-          -111.87,
           -209.77,
           211.66,
-          393.24,
-          -209.77,
           -209.07,
-          -194.5,
-          -209.77,
-          -209.07,
-          -287.79,
           -248.24,
-          -345.23,
-          -150.63,
-          -209.77,
-          -92.18,
-          -306.38,
-          -209.77,
           -248.24,
           -404.48,
           -424.5,
           179.19,
-          -364.83,
-          -307.38,
-          -58.45,
-          -384.3,
           276.92,
-          -30.92,
           -424.5,
-          -306.38,
-          5.2,
-          257.42,
-          -210.23
+          5.2
          ],
          "z": [
-          95.65,
-          272.38,
           -3.09,
-          6.05,
-          -436.63,
-          176.44,
           -402.08,
           -149.53,
-          -62.03,
-          384.95,
           425.57,
-          425.57,
-          -234.07,
           425.57,
           408.55,
-          459.61,
-          449.91,
-          425.57,
           493.65,
           434.71,
           340.47,
-          161.05,
           207.59,
           190.57,
           139.51,
-          122.49,
-          139.51,
           105.47,
-          397.95,
-          -304.04,
-          327.83,
           241.63,
           -193.43,
-          74.3,
-          241.63,
           -29.22,
-          6.05,
-          88.45,
-          192.05,
-          429.45,
           -420.22,
-          448.77,
-          -149.53,
-          241.63,
-          43.02,
-          273.86,
-          258.65,
           -284.05,
           481.61,
           -384.48,
           -229.55,
-          276.44,
-          95.65,
-          348.67,
-          -436.13,
           -234.07,
-          129.64,
           -384.48,
-          273.86,
-          99.93,
-          -366.7,
-          -163.27
+          99.93
          ]
         },
         {
@@ -435,16 +245,16 @@
          "name": "Predicted",
          "type": "scatter3d",
          "x": [
-          346.9990443877889,
-          -149.99904438778896
+          219.76830310171962,
+          -107.031636435053
          ],
          "y": [
-          -252.30202908234597,
-          -24.902164466041057
+          -4.744568031079666,
+          -236.8287653022537
          ],
          "z": [
-          810.112182801012,
-          -603.8118602203668
+          770.0793023051236,
+          -663.3601356384569
          ]
         },
         {
@@ -459,16 +269,16 @@
          "name": "Truth",
          "type": "scatter3d",
          "x": [
-          -478.82636432183085,
-          478.82636432183085
+          -470.15345580048375,
+          470.15345580048375
          ],
          "y": [
-          -199.391626990844,
-          199.391626990844
+          -195.78007702269764,
+          195.78007702269764
          ],
          "z": [
-          -552.6690161781141,
-          552.6690161781141
+          -542.6586070255512,
+          542.6586070255512
          ]
         }
        ],
@@ -480,10 +290,10 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "\n                    <b>exclude_axillary:</b> False\n                    <br>\n                    <b>time_threshold:</b> None\n                    <br>\n                    <b>charge_threshold:</b> None\n                    <br>\n                ",
-          "x": 0,
+          "text": "\n                    <b>exclude_axillary: </b> False\n                    <br>\n                    <b>time_threshold: </b> None\n                    <br>\n                    <b>charge_threshold: </b> (1, None)\n                    <br>\n                    <b>Score: </b> 1.4901161193847656e-08\n                    <br>\n                ",
+          "x": 0.01,
           "xref": "paper",
-          "y": 0,
+          "y": 0.01,
           "yref": "paper"
          }
         ],
@@ -1345,8 +1155,8 @@
     "    labels=true_values, \n",
     "    exclude_axillary=EXCLUDE_AUXILIARY, \n",
     "    marker_size=12, \n",
-    "    # charge_threshold=(0.8, 3),\n",
-    "    # time_threshold=(0, 10000)\n",
+    "    charge_threshold=(1, None),\n",
+    "    # time_threshold=(0, 12000)\n",
     ")"
    ]
   },
