--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -21,8 +21,8 @@
     "\n",
     "from typing import Optional\n",
     "import pandas as pd \n",
-    "from scripts.utils import seed_it_all\n",
-    "from scripts.plot import compose_event_df, plot_pca, get_event_true_values"
+    "from scripts.utils import seed_it_all, compose_event_df\n",
+    "from scripts.plot import plot_pca, get_event_true_values"
    ]
   },
   {
