Improve the XGBoost notebook

--- a/notebooks/xgboost.ipynb
+++ b/notebooks/xgboost.ipynb
@@ -56,6 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Logging\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Variables"
    ]
   },
@@ -65,6 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SEED=10\n",
+    "\n",
+    "\n",
     "# Parameters\n",
     "BATCH = 1 # What batch file to use?\n",
     "EXCLUDE_AUXILIARY = True # Whether to exclude auxiliary pulses\n",
@@ -114,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def seed_it_all(seed=7):\n",
+    "def seed_it_all(seed=SEED):\n",
     "    \"\"\" Attempt to be Reproducible \"\"\"\n",
     "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
     "    random.seed(seed)\n",
@@ -137,8 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib\n",
-    "\n",
     "def reduce_mem_usage(df, verbose=True):\n",
     "    numerics = ['int16', 'int32', 'int64', 'float16', 'float32', 'float64']\n",
     "    start_mem = df.memory_usage().sum() / 1024**2\n",
